dev/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-dev-canary-service
  namespace: rollouts-demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo-dev
