dev/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-dev-stable-service
  namespace: jettisonproj
  labels:
    backstage.io/kubernetes-id: rollouts-demo-dev
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo-dev
