dev/https-route-dev.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: jettisonproj
  name: rollouts-demo-dev-https-route
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
    sectionName: rollouts-demo-dev-osoriano-gw
  hostnames:
  - rollouts-demo-dev.osoriano.com
  rules:
  - backendRefs:
    - name: rollouts-demo-dev-stable-service
      kind: Service
      port: 80
    - name: rollouts-demo-dev-canary-service
      kind: Service
      port: 80
